--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Rafael",
   "license": "MIT",
   "devDependencies": {
+    "@types/node": "^24.10.0",
     "esbuild": "^0.19.12",
     "typescript": "^5.9.2"
   },
