--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@cloudflare/workers-types": "^4.20251014.0",
+    "aws4fetch": "^1.0.20",
     "wrangler": "^4.45.0"
   }
 }
